@@ -10,3 +10,4 @@ require 'jdbc_adapter/jdbc_db2'
 require 'jdbc_adapter/jdbc_mssql'
 require 'jdbc_adapter/jdbc_cachedb'
 require 'jdbc_adapter/jdbc_sqlite3'
+require 'jdbc_adapter/jdbc_sybase'
